# C-programming-2-semester

./: CMakeLists.txt  README.md  autotests.sh
.github/workflows/: CI.yml  formatter-linter-check.yml
CSVPrettyPrinter/: CSVPrettyPrinter.c  CSVPrettyPrinter.h  CSVPrettyPrinterTest.c
sources/CSVPrettyPrinter/: CSVPrettyPrinter.c  CSVPrettyPrinterMain.c
tests/CSVPrettyPrinter/: addresses_out  airtravel_out  biostats_out  csv_test_out  oneline_test.csv  oneline_test_out  run_tests.sh
